--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </button>
 
             <div id="editor-output-container">
-                <liveoutput class="output" ng-cloak>{{editor.textOutput}}</liveoutput>
+                <liveoutput class="output" readonly ng-cloak>{{editor.textOutput}}</liveoutput>
             </div>
         </div>
 
