--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="glyphicon glyphicon-resize-horizontal" />
             </button>
             <div id="editor-output-container">
-                <liveoutput class="output" ng-cloak>{{editor.textOutput}}</liveoutput>
+                <liveoutput class="output" readonly ng-cloak>{{editor.textOutput}}</liveoutput>
             </div>
         </div>
     		<script type="text/javascript" src="js/zepto.showdown.min.js"></script>
